--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,10 @@ a {
     color: white;
 }
 
+.card-body i#answer{
+    color: rgb(213, 143, 235);
+}
+
 @media screen and (min-width: 768px){
     .card{
         width: 50%;
