--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,8 @@ body{
     padding: 0;
 }
 
+/* ===== START JOC =====*/
+
 #start{
     height: 100vh;
     width: auto;
@@ -48,6 +50,9 @@ body{
     position: absolute;
     bottom: 4rem;
 }
+
+/* ===== ALEGE JOC =====*/
+
 
 #chooseGame,
 #game{
@@ -115,6 +120,7 @@ a {
     color: rgb(66, 43, 66);
     font-weight: 600;
 }
+
 
 #game h1{
     font-weight: 600;
@@ -187,15 +193,6 @@ a {
     cursor:auto;
 }
 
-#like-dislike{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0;
-    margin: 0;
-}
 
 #nextBtn button{
     height: 4rem;
@@ -218,6 +215,27 @@ a {
 .card-body i#answer:hover{
     color: rgb(151, 59, 179);
     cursor: pointer;
+}
+
+.fa-solid.fa-list-ul.fa-2x,
+#exitList{
+    color: white;
+    position:absolute;
+    top: 2rem;
+    right: 2rem;
+    z-index: 15;
+}
+
+.fa-solid.fa-list-ul.fa-2x:hover,
+#exitList:hover{
+    cursor: pointer;
+    color: #c98bf1;
+}
+
+.menuStyles{
+    position: absolute;
+    z-index: 10;
+    background-color: rgb(89, 16, 131);
 }
 
 @media screen and (min-width: 768px){
