--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,11 @@ body{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    /* background: url("/background.jpg") no-repeat center center fixed; 
+    background: url("/background.jpg") no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
-    background-size: cover; */
-    background-color: rgb(13, 59, 112);
+    background-size: cover; 
     margin: 0;
     padding: 0;
 }
