--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,9 @@ body{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    background: url("background.jpg") no-repeat center center fixed; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background: url("/background.jpg"); 
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover; 
     margin: 0;
     padding: 0;
