--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     align-items: center;
     flex-direction: column;
     justify-content: center;
-    background: url("/background.jpg"); 
+    background-image: url("/background.jpg"); 
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover; 
