--- a/css/style.css
+++ b/css/style.css
@@ -250,8 +250,8 @@ ul#myPeople{
     list-style-type: none;
     width:100%;
     display: flex;
-    flex-direction: column-reverse;
-    width: 17rem;
+    flex-direction: row;
+    width: 25rem;
     flex-wrap: wrap;
 }
 
@@ -260,6 +260,8 @@ ul#myPeople li{
     font-size: 1.25rem;
     padding: 0.3rem 0;
     font-weight: 500;
+    flex: 1 1 33%;
+    
 }
 
 ul#myPeople li i{
@@ -301,6 +303,11 @@ ul#myPeople li i{
     }
     /* Lista de persoane */
 
+    #choosePlayers{
+        min-height: 100vh;
+        overflow: hidden;
+    }
+
     #choosePlayers h1{
         font-weight: 600;
         font-size: 1.75rem;
@@ -314,4 +321,12 @@ ul#myPeople li i{
         padding: 0 1rem;
     }
 
+    ul#myPeople{
+        width: 17rem;
+        flex-wrap: wrap;
+    }
+    
+    ul#myPeople li{
+        flex: 1 1 50%;
+    }  
 }
